welcome.lessons.welcome.array.arraycount9.ArrayCount9.scala.error
arrayCount9:5: error: type mismatch;
 found   : String("9")
 required: Int
	if (nums(i) = "9")
                      ^